--- a/src/app/admin/detail-budget/detail-budget.component.html
+++ b/src/app/admin/detail-budget/detail-budget.component.html
@@ -57,7 +57,7 @@
       <button type="button" class="btn btn-secondary" (click)="modal.close()">
         OK
       </button>
-
+<button (click)="createWordDocument()">Word</button>
     </form>
   </div>
 </div>
