--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -17,7 +17,11 @@
     </div>
   </div>
 </div>-->
-<img id="video" class="" src="../../../assets/WhatsApp Image 2023-01-24 at 18.32.54.jpeg"/>
+<img
+  id="video"
+  class="mw-100"
+  src="../../../assets/WhatsApp Image 2023-01-24 at 18.32.54.jpeg"
+/>
 <h1 id="textHero" class="text-center w-25">
   ¿Listo para darle una reforma a tu hogar? <br />
   <button id="btnInicio" class="btn">Calcula tu presupuesto</button>
@@ -26,8 +30,10 @@
 <div class="container mw-100">
   <div class="row row-cols-xl-2 row-cols-1">
     <div class="col">
-      <h2 class="p-3">Sobre nosotros</h2>
-      <p class="p-3">
+      <h2 class="p-5 m-5 text-center" id="hSobreNosotros">Sobre nosotros</h2>
+    </div>
+    <div>
+      <p class="pe-5 pt-5 pb-5 me-5 mt-5 mb-5" id="pSobreNosotros">
         Somos una empresa con más de 18 años de experiencia en el sector de la
         construcción. Desde el año 2004, hemos estado trabajando en proyectos de
         todo tipo, desde pequeñas reparaciones en el hogar hasta grandes
@@ -35,9 +41,8 @@
       </p>
     </div>
 
-    <div class="col">
-      <h2 class="p-3">Nuestro equipo</h2>
-      <p class="p-3">
+    <div class="col text-end">
+      <p class="ps-5 pt-5 pb-5 ms-5 mt-5 mb-5" id="pNuestroEquipo">
         Nuestro equipo está compuesto por profesionales altamente capacitados en
         cada especialidad del sector de la construcción, lo que nos permite
         ofrecer trabajos con acabados de primera calidad y aprovechar al máximo
@@ -45,15 +50,16 @@
       </p>
     </div>
     <div class="col">
-      <img
-        src="../../../assets/LOGO K.jpeg"
-        class="p-auto m-auto"
-        width="auto"
-      />
+      <h2 class="p-5 m-5 text-center" id="hNuestroEquipo">Nuestro equipo</h2>
+    </div>
+
+    <div class="col">
+      <h2 class="p-5 m-5 text-center" id="hValores">
+        Valores e identidad de empresa
+      </h2>
     </div>
     <div class="col">
-      <h2 class="p-3">Valores e identidad de empresa</h2>
-      <p class="p-3 px-3">
+      <p class="m-5 p-5" id="pValores">
         Antes de iniciar cualquier proyecto, realizamos un estudio personalizado
         con nuestros asesores técnicos e interioristas y presentamos el proyecto
         a nuestros clientes para asegurarnos de que están completamente
@@ -66,7 +72,126 @@
     </div>
   </div>
 </div>
-
+<div class="grid">
+  <ul id="hexGrid">
+    <li class="hex">
+      <div class="hexIn">
+        <a class="hexLink" href="#"
+          ><div
+            class="img"
+            style="background-image: url(../../../assets/b1.jpeg)"
+          >
+            <h1 id="demo1">Proyecto 1</h1>
+            <p id="demo2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,
+              iure.
+            </p>
+          </div></a
+        >
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+    <li class="hex">
+      <div class="hexIn">
+        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
+          <h1>Proyecto 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
+          </p>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
 <div class="container mw-100">
   <div class="row row-cols-xl-2 row-cols-1">
     <div class="col">
