--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -37,7 +37,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-social-icon">
               <span>Síguenos en redes</span>
-              <a href="https://www.facebook.com/pages/Trojnarbcn" class="me-2"
+              <a href="https://www.facebook.com/profile.php?id=100062935764949" class="me-2"
                 ><img src="../../../assets/facebook.png" width="30px"
               /></a>
               <a href="https://www.instagram.com/trojnarbcn"
@@ -69,7 +69,7 @@
           <p>Copyright &copy; 2023, All Right Reserved</p>
         </div>
         <div class="col-6 text-end">
-          <img src="../../../assets/LOGOFEO.jpg" width="200px" alt="logo" />
+          <img src="../../../assets/LOGOFEO.jpg" id="logoFooter" alt="logo" />
         </div>
       </div>
     </div>
