--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,9 +1,4 @@
-<!--<div class="container m-0 mw-100">
-  <div class="row row-cols-3">
-    <div class="col">
-      <img id="video1" src="../../../assets/b2.jpeg" alt="" width="100%" />
-    </div>
-    <div class="col">
+<!--
       <video
         src="../../../assets/whats.mp4"
         autoplay
@@ -11,29 +6,26 @@
         muted
        
       ></video>
-    </div>
-    <div class="col">
-      <img id="video1" src="../../../assets/b22.jpeg" alt="" width="100%" />
-    </div>
-  </div>
-</div>-->
+   -->
 <img
-  id="video"
-  class="mw-100"
+  id="fondoHero"
+  class="w-100"
   src="../../../assets/WhatsApp Image 2023-01-24 at 18.32.54.jpeg"
 />
-<h1 id="textHero" class="text-center w-25">
+<h1 id="textHero" class="text-center w-50">
   ¿Listo para darle una reforma a tu hogar? <br />
-  <button id="btnInicio" class="btn">Calcula tu presupuesto</button>
+  <button id="btnInicio" class="btn" [@fadeInOut]="fadeInOut">
+    Calcula tu presupuesto
+  </button>
 </h1>
 
 <div class="container mw-100">
   <div class="row row-cols-xl-2 row-cols-1">
-    <div class="col">
-      <h2 class="p-5 m-5 text-center" id="hSobreNosotros">Sobre nosotros</h2>
+    <div [@fadeInOnScroll]="state" class="col">
+      <h2 class="text-center" id="hSobreNosotros">Sobre nosotros</h2>
     </div>
-    <div>
-      <p class="pe-5 pt-5 pb-5 me-5 mt-5 mb-5" id="pSobreNosotros">
+    <div class="col">
+      <p [@fadeInOnScroll]="state" id="pSobreNosotros">
         Somos una empresa con más de 18 años de experiencia en el sector de la
         construcción. Desde el año 2004, hemos estado trabajando en proyectos de
         todo tipo, desde pequeñas reparaciones en el hogar hasta grandes
@@ -41,8 +33,8 @@
       </p>
     </div>
 
-    <div class="col text-end">
-      <p class="ps-5 pt-5 pb-5 ms-5 mt-5 mb-5" id="pNuestroEquipo">
+    <div class="col">
+      <p [@fadeInOnScroll]="state" id="pNuestroEquipo">
         Nuestro equipo está compuesto por profesionales altamente capacitados en
         cada especialidad del sector de la construcción, lo que nos permite
         ofrecer trabajos con acabados de primera calidad y aprovechar al máximo
@@ -50,16 +42,18 @@
       </p>
     </div>
     <div class="col">
-      <h2 class="p-5 m-5 text-center" id="hNuestroEquipo">Nuestro equipo</h2>
+      <h2 [@fadeInOnScroll]="state" class="text-center" id="hNuestroEquipo">
+        Nuestro equipo
+      </h2>
     </div>
 
     <div class="col">
-      <h2 class="p-5 m-5 text-center" id="hValores">
+      <h2 [@fadeInOnScroll]="state" class="text-center" id="hValores">
         Valores e identidad de empresa
       </h2>
     </div>
     <div class="col">
-      <p class="m-5 p-5" id="pValores">
+      <p [@fadeInOnScroll]="state" id="pValores">
         Antes de iniciar cualquier proyecto, realizamos un estudio personalizado
         con nuestros asesores técnicos e interioristas y presentamos el proyecto
         a nuestros clientes para asegurarnos de que están completamente
@@ -72,150 +66,79 @@
     </div>
   </div>
 </div>
-<div class="grid">
-  <ul id="hexGrid">
-    <li class="hex">
-      <div class="hexIn">
-        <a class="hexLink" href="#"
-          ><div
-            class="img"
-            style="background-image: url(../../../assets/b1.jpeg)"
-          >
-            <h1 id="demo1">Proyecto 1</h1>
-            <p id="demo2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,
-              iure.
-            </p>
-          </div></a
-        >
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="hex">
-      <div class="hexIn">
-        <div class="img" style="background-image: url(../../../assets/b1.jpeg)">
-          <h1>Proyecto 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, iure.
-          </p>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
-<div class="container mw-100">
-  <div class="row row-cols-xl-2 row-cols-1">
-    <div class="col">
-      <h2 class="pt-3">Servicios</h2>
-      <p class="p-3">
-        -Instalaciones de todo tipo: realizamos la instalación, reparación y
-        mantenimiento de sistemas eléctricos, fontanería, domótica y calefacción
-        entre otros.<br />
-        -Obra civil: realizamos todo tipo de trabajos de construcción y reforma,
-        desde la preparación del terreno hasta la finalización de la obra.<br />
-        -Rehabilitación completa de viviendas: llevamos a cabo reformas
-        integrales de viviendas, desde la actualización de las instalaciones
-        hasta la renovación de baños y cocinas.<br />
-        -Diseño y decoración: ofrecemos servicios de diseño y decoración para
-        que tu hogar o negocio tenga una nueva imagen.
-      </p>
-      <button id="galeria" class="btn p-3">Galería</button>
-    </div>
-    <div class="col">
-      <img src="../../../assets/b1.jpeg" id="fotoCocina" class="m-5" />
-    </div>
+<div class="grid-wrapper">
+  <div>
+    <img src="../../../assets/b1.jpeg" alt="" />
   </div>
-  <div class="row text-center justify-content-center">
-    <h2 class="p-5">Calcula tu presupuesto personalizado</h2>
-    <button id="calculadora" class="btn mb-5 w-25 p-3">Calculadora</button>
+  <div><img src="../../../assets/b2.jpeg" alt="" /></div>
+  <div class="tall"><img src="../../../assets/b1.jpeg" alt="" /></div>
+  <div class="wide"><img src="../../../assets/b22.jpeg" alt="" /></div>
+  <div><img src="../../../assets/b2.jpeg" alt="" /></div>
+  <div class="tall"><img src="../../../assets/b1.jpeg" alt="" /></div>
+  <div class="big"><img src="../../../assets/b22.jpeg" alt="" /></div>
+  <div><img src="../../../assets/b2.jpeg" alt="" /></div>
+  <div class="wide"><img src="../../../assets/b2.jpeg" alt="" /></div>
+</div>
+
+<div class="w-100">
+  <div id="parallax-world-of-ugg">
+    <div>
+      <div [@fadeInOnScroll]="state" class="block">
+        <h2 id="serviciosH" class="text-center">SERVICIOS</h2>
+        <p class="servicios">
+          -Instalaciones de todo tipo: realizamos la instalación, reparación y
+          mantenimiento de sistemas eléctricos, fontanería, domótica y
+          calefacción entre otros.<br />
+          -Obra civil: realizamos todo tipo de trabajos de construcción y
+          reforma, desde la preparación del terreno hasta la finalización de la
+          obra.<br />
+          -Rehabilitación completa de viviendas: llevamos a cabo reformas
+          integrales de viviendas, desde la actualización de las instalaciones
+          hasta la renovación de baños y cocinas.<br />
+          -Diseño y decoración: ofrecemos servicios de diseño y decoración para
+          que tu hogar o negocio tenga una nueva imagen.
+        </p>
+      </div>
+    </div>
+
+    <div class="hello">
+      <div class="parallax-one" id="parrallax"></div>
+      <a class="gradient-btn" id="encima" href="#">GALERÍA</a>
+    </div>
+
+    <div>
+      <div [@fadeInOnScroll]="state" class="block text-center">
+        <h1 id="calcula">Calcula tu presupuesto</h1>
+
+        <p  [@fadeInOnScroll]="state" id="pCalcula">
+          La calculadora es una herramienta diseñada para ayudarte a obtener una
+          aproximación del precio total de la reforma integral de tu vivienda.
+          Con ella, puedes seleccionar los trabajos que deseas realizar en tu
+          hogar, como pintura, electricidad, baños, entre otros, y obtener una
+          estimación del presupuesto total.
+          <br />
+          <br />
+          Ten en cuenta que los precios obtenidos son orientativos y pueden
+          variar dependiendo de la ubicación, la disponibilidad de materiales y
+          otros factores. Contactar con nosotros para obtener un presupuesto más
+          preciso.
+        </p>
+
+        <div>
+          <a class="frame-btn" href="#">
+            <span class="frame-btn__outline frame-btn__outline--tall">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__outline frame-btn__outline--flat">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__solid"></span>
+            <span class="frame-btn__text">EMPEZAR</span>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
